--- a/gb/21/11/9/n13363566.md
+++ b/gb/21/11/9/n13363566.md
@@ -1,64 +1,51 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国交换生在塔州溺水身亡</h2>
-
 <h6></h6>
 <hr>
-<p>【大纪元2021年11月09日讯】（大纪元记者天睿澳洲悉尼编译报导）一名在塔州<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%BA%BA%E6%B0%B4%E8%BA%AB%E4%BA%A1.md#1">溺水身亡</a>的男孩经证实为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BA%A4%E6%8D%A2%E7%94%9F.md#1">中国交换生</a>韩瑞轩（Rui Xuan Han，音译）。</p>
+<p>【大纪元2021年11月09日讯】（大纪元记者天睿澳洲悉尼编译报导）一名在塔州溺水身亡的男孩经证实为中国交换生韩瑞轩（Rui Xuan Han，音译）。</p>
 <p>11月7日下午，韩瑞轩与朋友在灯塔湾（Lighthouse Bay）附近浮潜（潜游）时溺水。警方接报后派出救援直升机施救，但韩瑞轩已经身亡。</p>
-<p>韩瑞轩是塔鲁纳中学（Taroona High School）的10年级学生。该校校长贝内尔（Matt Bennell）给师生发邮件证实了韩瑞轩<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%BA%BA%E6%B0%B4%E8%BA%AB%E4%BA%A1.md#1">溺水身亡</a>的消息，并要求家长对孩子们在社交媒体上发布的内容多加注意。</p>
+<p>韩瑞轩是塔鲁纳中学（Taroona High School）的10年级学生。该校校长贝内尔（Matt Bennell）给师生发邮件证实了韩瑞轩溺水身亡的消息，并要求家长对孩子们在社交媒体上发布的内容多加注意。</p>
 <p>澳洲广播播公司获得的邮件内容显示，校长在邮件中说，学校对韩瑞轩的去世表示哀悼，学校社区“都知道留学生的价值，他们为我们的学校社区带来了如此宝贵的多样性”。</p>
 <p>邮件还说：“年轻人经常上社交媒体看看别人在说什么，或者搜索更多信息。在这些时候，重要的是要监督他们的使用情况，并与他们交流一下他们都在看什么。”◇</p>
 <p>责任编辑：宗敏青</p>
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a><br />
 （本文未经许可不得转载或建立镜像网站）</strong></p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918229.md#1">等待获得客服?澳人去年耗费近一亿小时</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918172.md#1">NRL球星叔叔在悉尼海滩救人时溺水身亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918247.md#1">全澳首例 大学生用人工智能作弊后挂科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918122.md#1">悉尼暴风雨将缓解 但闷热天气仍将持续数日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13918083.md#1">ClubsNSW出台新规 拟禁涉洗钱赌客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918116.md#1">跨境网课不再受认可 中国留学生急需赴澳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918115.md#1">西悉尼发生一系列停电事故 数千用户受影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918113.md#1">澳航航班又出状况 不到两周内第八次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13918084.md#1">德约科维奇澳网第十次封王 夺大满贯第22冠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914654.md#1">三男一女骑摩托车飙车 被警方拦截</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651502.md#1">西悉尼一油站突发大火 逾50消防员现场扑救</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651621.md#1">昆州严打非法烟草?缴货逾千万元?关店148家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651633.md#1">RBA年终会议：通胀反弹 现金利率按兵不动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651521.md#1">昆州州长人气下降 反对党领袖好感度转为正数</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651490.md#1">澳投资十亿 加速自研国产无人机量产</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651523.md#1">Gabbinbar Homestead荣膺昆州最佳婚礼场地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651527.md#1">又一起死亡或与000急救电话未接通有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651547.md#1">南澳州选举百日倒数 自由党领袖更替</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651503.md#1">八成人不用附加险 澳私人医保业或白赚3.4亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651413.md#1">燃油车乱停电动车车位 各州违规罚款盘点</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/10/n11102523.md#1" target="_blank">马吉卫：难以平复的伤疤</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914722.md#1">濒死女子见到前世与未来景象 了解人生目的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906660.md#1">悟空为何能得“长生”之法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890743.md#1">【百年真相】株连六万人 小说成中共内斗“杀器”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917245.md#1">【拍案惊奇】习愁2027连任？西安班机高空下坠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917008.md#1">【车评】初试首辆丰田纯电车 2023 Toyota bZ4X Limited</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917204.md#1">【马克时空】美德军援主战坦克 乌克兰何时才能扭转战局？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917383.md#1">因挺白纸革命？女星春夏遭春晚和新片双除名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916976.md#1">一文看懂 一台光刻机背后的美中激烈博弈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916929.md#1">【新闻看点】侵台时间定？传习给王沪宁新任务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917383.md#1">因挺白纸革命？女星春夏遭春晚和新片双除名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916993.md#1">金钟视帝丁强惊传初六逝世 经纪人证实</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917173.md#1">BLACKPINK新添6项吉尼斯世界纪录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916865.md#1">小贾斯汀打包出售歌曲版权 290首获2亿美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916827.md#1">《男儿当入樽》影评: 4814日后 你还喜欢篮球吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915759.md#1">传染病专家：中共两大官方新冠数据矛盾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917160.md#1">既长寿又健康 美国82岁医生每天做这6件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901656.md#1">50岁前退休可能吗？教你9招做好退休准备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917008.md#1">【车评】初试首辆丰田纯电车 2023 Toyota bZ4X Limited</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916751.md#1">日本不只有拉面 征服味蕾的还有这些面</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/9/n13363566.htm">中国交换生在塔州溺水身亡</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/21/11/9/n13363566.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/9/n13363566.htm">中国交换生在塔州溺水身亡</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/21/11/9/n13363566.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
